--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@
         <nav>
             <img src="./img/logo-principal.png" alt="">
             <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="./page/servicios.html">Servicios</a></li>
-                <li><a href="./page/ventas.html">Ventas</a></li>
-                <li><a href="./page/trabajos.html">Trabajos</a></li>
-                <li><a href="./page/contactos.html">Contactos</a></li>
+                <li><a class="menu" href="">menu</a>
+                    <ul>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="./page/servicios.html">Servicios</a></li>
+                        <li><a href="./page/ventas.html">Ventas</a></li>
+                        <li><a href="./page/trabajos.html">Trabajos</a></li>
+                        <li><a href="./page/contactos.html">Contactos</a></li>
+                    </ul>
+                </li>
+
             </ul>
         </nav>
     </header>
