--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <img src="./img/logo-principal.png" alt="">
             <ul>
-                <li><a class="menu" href="">menu</a>
+                <li><a class="menu" href="" onclick="return false">menu</a>
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
                         <li><a href="./page/servicios.html">Servicios</a></li>
