--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@
         <nav>
             <img src="./img/logo-principal.png" alt="">
             <ul>
-                <li><a class="menu" href="" onclick="return false">menu</a>
+                <li> 
+                 <div class="menu">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                  </div>
                     <ul>
-                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="./index.html">Inicio</a></li>
                         <li><a href="./page/servicios.html">Servicios</a></li>
                         <li><a href="./page/ventas.html">Ventas</a></li>
                         <li><a href="./page/trabajos.html">Trabajos</a></li>
